# Differential-Privacy-Project

./: .gitignore  LICENSE  README.md  Ressources.md  analysis.ipynb  config.py  gradient_attack.py  models.py  old_attack_code.py  pyproject.toml  requirements.txt  train.py  utils.py
static/: leakage_attack_DP_SGD.csv  leakage_attack_PDP_SGD.csv  leakage_attack_normal.csv
