[project]
name = "differential-privacy-project"
version = "0.1.0"
description = "Differential Privacy: Gradient Leakage Attacks in Federated Learning Environments Topics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2",
    "opacus>=1.5.3",
    "pandas>=2.2.3",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.6.1",
    "torch<2.3.0",
    "torchvision>=0.17.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
